feat: WebRTC 비디오 스트리밍 완성 - SDP Payload Type 동적 협상
- WebRTCPeer: 브라우저 SDP Offer에서 H.264 Payload Type 동적 파싱
- WebRTCPeer: SDP Answer에서 브라우저의 PT를 그대로 사용하여 코덱 협상 성공
- RTPRepacketizer: setWebRTCPayloadType()으로 동적 PT 설정 지원
- RTPRepacketizer: STAP-A 패킷 (SPS+PPS 번들링) 구현
- Go 레거시 코드를 go-legacy/ 디렉토리로 이동
- Kotlin + Spring Boot 기반 미디어 서버 전체 구현 완료

주요 해결된 문제:
- decoderImplementation: libvpx → FFmpeg (H.264 디코더 정상 선택)
- framesReceived: 0 → 정상 수신
- Chrome/Edge 브라우저 호환성 확보

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>